--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -71,7 +71,7 @@ $shadow-active: 4px 4px 8px rgba(0, 0, 0, .15);
 $form-height: 2rem;  // ~32px (height set manually)
 $form-line-height: normal;
 $form-font-size: $font-size-base;  // ~16px
-// $form-padding-vertical: calc-padding-y($form-height, $form-font-size);
+$form-padding-vertical: calc-padding-y($form-height, $form-font-size);
 $form-padding-top: .5625rem;  // ~9px
 $form-padding-bottom: .4375rem;  // ~7px
 $form-padding-horizontal: .5rem;  // ~33px + border thickness = 32px
@@ -82,10 +82,12 @@ $checkbox-size: 1rem;
 $checkbox-border: 1px solid $gray;
 
 // Field message
-$field-msg-padding: $form-padding-horizontal;
+$field-msg-padding-vertical: $form-padding-vertical * 1.2;
+$field-msg-padding-horizontal: $form-padding-horizontal;
 $field-msg-icon-size: $font-size-lg;
 $field-msg-font-size: $font-size-base;
 $field-msg-line-height: $field-msg-font-size;
+$field-msg-shadow-height: .625rem;  // ~10px
 
 
 ///
